# Bombolone

./: Cargo.toml  README.md
src/: main.rs
src/handler/: camera.rs  channel.rs  mod.rs  qrcode.rs  video.rs
