[package]
name = "bombolone"
version = "0.1.0"
authors = ["dusan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["rustls"] }
actix-cors = "0.5.4"
actix-identity = "0.3"
actix-files = "0.5.0"
dotenv = "0.15.0"
rustls = "~0.18"
url = "2.0"
futures = "0.3.1"
failure = "0.1.3"
log = "0.4"
qrcode = "0.12.0"
serde = { version = "1.0.43", features = ["derive"] }
serde_json = "1.0.16"
env_logger ="0.8.3"
time = "0.2.22"
rscam = "0.5.5"
retain_mut = "0.1.3"
image = "0.23.14"
derive_more = "0.99.14"